Get Sensor Average modified to return decimal.
