# Infrastructure/Custom/AveragePerMonthDto.cs
@@ -1,10 +1,0 @@
-﻿using Infrastructure.Entities;
-
-namespace Infrastructure.Custom
-{
-    public class AveragePerMonthDto
-    {
-        public string Month { get; set; }
-        public int Count { get; set; }
-    }
-}
